--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,22 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Reddit+Sans:ital,wght@0,200..900;1,200..900&display=swap');
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html, body, body > div {
+  height: 100%;
+}
+
+body {
+  font-family: 'Reddit Sans', sans-serif;
+  background: #141414;
+  color: white;
+  text-decoration: none;
+}
+
+a {
+  text-decoration: none;
 }
